<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/comment_name_tv"
            android:layout_width="128dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/name"
            android:textColor="@android:color/black"
            android:textSize="15sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/comment_body_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/comment"
            android:textSize="15sp"
            android:textColor="@android:color/black"/>

    </LinearLayout>

    <TextView
        android:id="@+id/email_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_email"
        android:textStyle="bold"
        android:textSize="15sp"
        android:layout_gravity="end"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="3dp"
        android:background="@color/view_cover"/>

</androidx.appcompat.widget.LinearLayoutCompat>