<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/splash_light"
    android:padding="8dp"
    tools:context=".ui.fragments.ReadPostFragment">

    <TextView
        android:id="@+id/blog_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/post_body"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/post_body"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/blog_title"
        tools:layout_editor_absoluteY="8dp" />

    <TextView
        android:id="@+id/comment_heading_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/comments"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/post_body" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/read_post_layout_rv"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        app:layout_constraintBottom_toTopOf="@+id/post_comment_TI_container"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/comment_heading_tv" />

    <!--    <com.google.android.material.floatingactionbutton.FloatingActionButton-->
    <!--        android:id="@+id/add_post_button"-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_marginEnd="24dp"-->
    <!--        android:layout_marginBottom="10dp"-->
    <!--        android:contentDescription="@string/add_post_fab_desc"-->
    <!--        android:src="@drawable/add_comment_icon"-->
    <!--        app:layout_constraintBottom_toTopOf="@+id/add_comment_fab"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintHorizontal_bias="1.0"-->
    <!--        app:layout_constraintStart_toStartOf="parent" />-->

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/add_post_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/add_comment"
        android:src="@drawable/add_comment_icon"
        app:backgroundTint="@color/fab_color"
        app:layout_constraintBottom_toTopOf="@+id/post_comment_TI_container"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

<!--    <com.google.android.material.textfield.TextInputLayout-->
<!--        android:id="@+id/add_post_TI_container"-->
<!--        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginLeft="5dp"-->
<!--        android:layout_marginRight="5dp"-->
<!--        android:hint="@string/add_post_title"-->
<!--        app:boxStrokeColor="#4E4A4A"-->
<!--        app:boxStrokeWidth="1dp"-->
<!--        app:layout_constraintBottom_toTopOf="@+id/post_content_TI_container"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintHorizontal_bias="0.5"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:shapeAppearanceOverlay="@style/Button4"-->
<!--        tools:layout_editor_absoluteY="8dp">-->

<!--        <com.google.android.material.textfield.TextInputEditText-->
<!--            android:id="@+id/add_post_TI"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:ems="10"-->
<!--            android:inputType="text|textMultiLine|textPersonName"-->
<!--            android:textColor="@color/black"-->
<!--            android:textSize="13sp"-->
<!--            android:textStyle="normal" />-->
<!--    </com.google.android.material.textfield.TextInputLayout>-->

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/post_comment_TI_container"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:hint="@string/add_comment"
        app:boxStrokeColor="@color/black"
        app:boxStrokeWidth="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:shapeAppearanceOverlay="@style/Button4"
        tools:layout_editor_absoluteY="8dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/post_comment_TI"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text|textMultiLine"
            android:textColor="@color/black"
            android:textSize="13sp"
            android:textStyle="normal" />
    </com.google.android.material.textfield.TextInputLayout>

<!--    <TextView-->
<!--        android:id="@+id/fab_description_tv"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:text="@string/create_post"-->
<!--        android:textAlignment="textEnd"-->
<!--        android:textColor="@color/black"-->
<!--        android:textSize="12sp"-->
<!--        android:textStyle="normal"-->
<!--        app:layout_constraintBottom_toTopOf="@+id/add_post_TI_container"-->
<!--        app:layout_constraintEnd_toStartOf="@+id/add_comment_fab"-->
<!--        app:layout_constraintHorizontal_bias="0.967"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent"-->
<!--        app:layout_constraintVertical_bias="0.965" />-->

</androidx.constraintlayout.widget.ConstraintLayout>